feat: API - remove is admin from user infos
